--- a/assets/README
+++ b/assets/README
@@ -1,3 +1,6 @@
 Many assets sourced from:
 UI pack: Space extension by Kenney Vleugels (www.kenney.nl)
 Space Shooter (Redux, plus fonts and sounds) by Kenney Vleugels (www.kenney.nl)
+
+Cargo Box assets sources from:
+Top down 2D Metal box by Jelly Bean (https://opengameart.org/content/top-down-2d-metal-box)
