Update UI elements
Atttempt to better differentiate popups, panels & buttons.
Add credits

--- a/assets/README
+++ b/assets/README
@@ -4,3 +4,7 @@ Space Shooter (Redux, plus fonts and sounds) by Kenney Vleugels (www.kenney.nl)
 
 Cargo Box assets sources from:
 Top down 2D Metal box by Jelly Bean (https://opengameart.org/content/top-down-2d-metal-box)
+
+Ship Block assests sourced from:
+"Spaceship construction blocks" by Buch
+https://opengameart.org/users/buch
